--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>個人簡介</title>
-    <link rel="stylesheet" href="練習二.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <div class="profile">
